# codeFEM

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  hello  helloworld.cpp  makefile.back  readme.md
source/Common/: common.h  math.h
source/NumericalMesh/: CMakeLists.txt
source/NumericalMesh/core/: Mesh.cpp  Mesh.h  core.h
source/NumericalMethods/: CMakeLists.txt
source/NumericalMethods/core/: Equation.h  Solver.cpp  Solver.h  Tools.cpp  Tools.h  core.h
source/OpenMesh/: CMakeLists.txt
source/OpenMesh/core/: OpenMesh.h  core.h
source/Test/Optimization/: BaseSolver.cpp  BaseSolver.h  CodeDoc.md  Common.h  Configure.h  Configure.h.in  Instance.cpp  Instance.h  Main.cpp  Mesh.h  Optimization.cpp  Optimization.h  Optimization.md  PreProcess.cpp  PreProcess.h  Solver.cpp  Solver.h  helloworld.cpp  readme.txt
